first set of fixes

--- a/frontmatter/summary.tex
+++ b/frontmatter/summary.tex
@@ -10,7 +10,7 @@ The growth of computational power and the increased importance of digital data h
 
 Since workflows are composed of segregated inter-dependent tasks which can run in their own containers, the individual tasks which make up a workflow can be assigned a fraction of the computational resources available to the entire execution platform and doing so intelligently could improve efficiency and performance.
 
-This thesis aims to investigate how reinforcement learning can be applied to the allocation of resources to individual tasks to choose more efficient allocations. The implementation of a reinforcement learning solution will be integrated into the source code of a popular scientific workflow management system and tested with several common bioinformatic workflows. Two different approaches (Gradient Bandits and Q-Learning) will be used and their performance will be judged alongside the performance of the task's default resource configurations and the resource allocation chosen by a naive approach using a feedback loop.
+This thesis aims to investigate how reinforcement learning can be applied to the allocation of resources to individual tasks to choose more efficient allocations. The implementation of a reinforcement learning solution will be integrated into the source code of a popular scientific workflow management system and tested with several common bioinformatic workflows. Two different approaches (Gradient Bandits and Q-Learning) will be used and their performance will be judged alongside the performance of the task's default resource configurations and the resource allocation chosen by an approach using a feedback loop.
 
 In the end the approaches presented in this thesis outperform the default configurations with regards to both memory and CPU efficiency and are able to achieve better CPU efficiency than the feedback loop, but while they fail to match its memory efficiency they still represent a vast improvement on the default configuration.
 
