--- a/mainmatter/02_background.tex
+++ b/mainmatter/02_background.tex
@@ -36,7 +36,7 @@ The emergence of scientific workflows as a method for representing and managing 
 
 Because the resource requirements of scientific workflows can be immense \cite{ResourceProvisioning}, workflow managers must be able to interface with powerful execution platforms which usually use resource managers such as Kubernetes \cite{kubernetes} or YARN \cite{yarn}. A workflow manager will schedule a workflow’s tasks with the resource manager (this will include assigning the task a fixed amount of resources), handle failures as configured by the user, manage the communication between tasks, and collect and store the results if the workflow’s execution succeeds.
 
-At this point it is important to clarify the distinct responsibilities of a workflow management system, an execution platform and a scientific workflow, with regards to the tasks. The user or creator of the workflow decides which tasks need to be executed and when they need to be executed relative to eachother and the SWMS will schedule tasks with the execution platform according to this design. It is the execution platform which will ultimately decide when a task will actually be executed on physical hardware. In this transaction it is the SWMS which is acting as the middle man. Beyond which tasks to execute, and in which order, the user will also decide what the inputs to a task should be and the workflow manager will ensure that before the task is executed those inputs are available and that they are passed to the task. 
+At this point it is important to clarify the distinct responsibilities of a workflow management system, an execution platform and a scientific workflow, with regards to the tasks. The user or creator of the workflow decides which tasks need to be executed and when they need to be executed relative to each other and the SWMS will schedule tasks with the execution platform according to this design. It is the execution platform which will ultimately decide when a task will actually be executed on physical hardware. In this transaction it is the SWMS which is acting as the middle man. Beyond which tasks to execute, and in which order, the user will also decide what the inputs to a task should be and the workflow manager will ensure that before the task is executed those inputs are available and that they are passed to the task. 
 
 Finally, with regards to resources, the user does not need to specify what the resources assigned to a task should be, the user may do so if they like, however it is not a requirement, and in the event that they do not assign any resources the SWMS will pick an assignment. The assignment of resources to a task is a request by the workflow management system to the execution platform, and, provided the platform can fulfil these requirements, the task should be executed in an environment where it has access to as many resources as it was assigned but not more. Tasks which exceed their resource requirements will often be aborted and this will be communicated to the resource manager which will then have to decided if it should try to run the task again, continue without the task, or abort the execution of the entire workflow- what action to take in this event can also be configured by the user.
 
@@ -44,7 +44,7 @@ Finally, with regards to resources, the user does not need to specify what the r
 \section{Reinforcement Learning}
 \label{sec:rl}
 
-Popularized in the seminal book by Sutton and Barto \cite{sutton_barto}, reinforcement learning can broadly be said to present a framework for a learning system or “agent” to find the optimal policy for achieving a given goal in an uncertain environment by interacting with the problem and the environment. Most importantly it is also able to adjust this policy ``on the go'', meaning it can both learn a new policy if the challenge or the environment changes, and that it can be deployed without any training and it will improve as it gains experience. In this context the agent's goal is always set by a reward function. Using reinforcement learning, the agent learns to maximize this function and thus, hopefully, achieve the desire of its designers. To put it simply, reinforcement learning is a “computational approach to learning from interactions” \cite{sutton_barto}
+Popularized in the book by Sutton and Barto \cite{sutton_barto}, reinforcement learning can broadly be said to present a framework for a learning system or “agent” to find the optimal policy for achieving a given goal in an uncertain environment by interacting with the problem and the environment. Most importantly it is also able to adjust this policy ``on the go'', meaning it can both learn a new policy if the challenge or the environment changes, and that it can be deployed without any training and it will improve as it gains experience. In this context the agent's goal is always set by a reward function. Using reinforcement learning, the agent learns to maximize this function and thus, hopefully, achieve the desire of its designers. To put it simply, reinforcement learning is a “computational approach to learning from interactions” \cite{sutton_barto}
 
 Central to all reinforcement learning is the idea of exploration versus exploitation. Since the agent initially knows nothing about its environment it must attempt  to learn through exploration. By trying different things and receiving different rewards the agent can construct a policy that always makes the optimal choice. But in order to know what a good or an optimal choice is the learning system must also occasionally make the wrong choice so that it can learn not to make it again. Trying different things is ''exploration'' and using the knowledge gained from this to make the right choice is``exploitation''. An agent cannot simultaneously explore and exploit. This dichotomy is at the core of reinforcement learning. The agent must always make the choice between exploring more to potentially discover an even better policy and eventually yield even better rewards in the future, or using its current policy to increase its immediate rewards.
 
