--- a/mainmatter/03_related_work.tex
+++ b/mainmatter/03_related_work.tex
@@ -32,11 +32,11 @@ This target of that paper is of course much more similar to that of this thesis 
 
 Next, in \cite{FeedbackBasedAllocation} a feedback based resource allocation system for the scheduling of scientific workflows is designed. Their approach uses an online feedback-loop to improve resource usage predictions and thus more accurately allocate resources to the constituent tasks of a scientific workflow. Tasks within scientific workflows were assigned memory based on percentile or linear regression predictors. One such percentile predictor, called PC50, worked by using the median memory usage of a task as its prediction. This approach was significantly outperformed by the \textit{LR mean} approach which was a linear regression predictor that predicted memory usage based on a linear regression that relates a task’s input data to its memory usage. This prediction is then offset by the standard deviation between the predicted and the true peak memory usage.
 
-This paper addresses a very similar problem to that of this thesis but attempts to use linear regression to predict memory usage whereas this paper is focused on using reinforcement learning. Of course it also does not attempt to predict CPU usage or assign CPUs to tasks. The PC50 approach and \textit{LR mean} approaches ultimately served as inspiration for the naive approach with which the agents in this thesis are compared. The naive approach used in this thesis essentially takes the PC50 predictor and adds an offset based on standard deviation just like \textit{LR mean} to try and predict memory usage. 
+This paper addresses a very similar problem to that of this thesis but attempts to use linear regression to predict memory usage whereas this paper is focused on using reinforcement learning. Of course it also does not attempt to predict CPU usage or assign CPUs to tasks. The PC50 approach and \textit{LR mean} approaches ultimately served as inspiration for the feedback loop approach with which the agents in this thesis are compared. The feedback loop approach used in this thesis takes the PC50 predictor and adds an offset based on standard deviation, much like \textit{LR mean}, to try and predict memory usage. 
 
 Finally there is \cite{tovarjob} which presents a job sizing strategy for tasks in scientific workflows. The researchers used equations based on integrals over the resource usage to either minimise waste or maximise throughput. When gathering training data they assigned tasks the maximum allowable value for all of their resources. This was repeated until the task’s resource usage statistics began to converge. Then they used their analytical solution to assign resources and if the task failed or was killed it was retried again with the maximum available resources. Ultimately an increase in throughput of between 10 and 400 was achieved.
 
-The approach in this paper also served as inspiration for the naive approach used here. The idea to assign the maximum resources available and observe a task’s performance is an interesting strategy for determining how to size a task. It could be considered an alternative form of “exploring” possible resource assignments because it lets a task pick its own resources by making all of them available to each task. The assumption is made that a task’s resource usage does not depend on its available resources. Lastly unlike in \cite{FeedbackBasedAllocation} which only considers memory- \cite{tovarjob} looks at CPUs and disk space and how to assign these resources to tasks within scientific workflows.
+The approach in this paper also served as inspiration for the feedback loop approach used here. The idea to assign the maximum resources available and observe a task’s performance is an interesting strategy for determining how to size a task. It could be considered an alternative form of exploration to that in reinforcement learning because it determines a task's resource requirements based on the task's usage when the maximum possible amount of resources are available as oppposed to exploring different allocations. It is critical to note that an assumption is made that a task’s resource usage does not depend on the available resources. Lastly unlike in \cite{FeedbackBasedAllocation}, which only considers memory, \cite{tovarjob} looks at CPUs and disk space and how to assign these resources to tasks within scientific workflows.
 
 \section{Points of Interest from these Works}
 \label{sec:takeaways}
@@ -45,5 +45,5 @@ All of the papers discussed in section \ref{sec:rl_allocation} managed to utiliz
 
 In section \ref{sec:workflow_allocation_papers} the topic of resource management in scientific workflows was looked at and the papers mentioned all tended to use more analytical approaches. Indeed there is relatively limited literature regarding combining machine learning and scientific workflow management. A consistent theme in the papers about sizing tasks in scientific workflows is the idea that a task’s resource requirements are relatively static and can be learned over time using linear regression or profiling.  One topic which is not really addressed in these papers is the relationship between resource assignment and performance, because assigning a task more resources (which may be less efficient) can speed up performance. This is an important topic in this thesis and the papers \cite{FeedbackBasedAllocation} and \cite{tovarjob} do not mention runtime, while \cite{tarema} does mention it but does not deal with task sizing. In this thesis the effect of task sizing on workflow performance is an delicate tradeoff which must be balanced correctly to both reduce resource wastage and maintain reasonable runtimes and improve (or at least not harm) workflow performance.
 
-The papers \cite{FeedbackBasedAllocation,tovarjob}in section \ref{sec:workflow_allocation_papers} both served as direct inspiration for the feedback loop approach which is compared with the reinforcement learning agents. This naive approach functions by combining the training process from \cite{tovarjob} with the \textit{LR mean} allocation scheme from \cite{FeedbackBasedAllocation}.
+The papers \cite{FeedbackBasedAllocation,tovarjob}in section \ref{sec:workflow_allocation_papers} both served as direct inspiration for the feedback loop approach in this thesis which is compared with the reinforcement learning agents. The approach functions by combining the training process from \cite{tovarjob} with the \textit{LR mean} allocation scheme from \cite{FeedbackBasedAllocation}.
 
