--- a/mainmatter/05_evaluation.tex
+++ b/mainmatter/05_evaluation.tex
@@ -17,7 +17,7 @@ The input data used for the workflows is based on custom combinations of differe
 
 Nextflow inherently keeps track of the total number of resources available and the resources already assigned to tasks and it will not schedule more resources than the system has left. The tasks are all run inside of docker containers with the exact amount of CPUs and memory requested by the task. Since the tasks are all being run on the same machine it would have been possible to ignore the sum of the resource requests and over-assign resources so that all of the tasks compete with each other, but this does not reflect situations where pipelines are being run on clusters with resource managers, and as such this was left unchanged.
 
-For the final comparison in the next section the 10 runs with the default configurations are compared with the last 10 runs of each of the agents and 10 runs using a naive feedback loop approach. The naive approach functions as follows: first, during training, the workflows are run 10 times and each task is assigned the maximum number of CPUs and memory available. Then, in the next 10 runs the task are assigned the floor of the average number of CPUs used during the training and the mean amount of memory used plus the standard deviation. Should a task fail, then it is retried with the maximum amount of memory ever used by that task during the training time, and should it fail again then it is retried with double that value. This feedback loop approach has been mentioned in chapter \ref{cha:related_work} and it is loosely based on the work from \cite{tovarjob,FeedbackBasedAllocation}.
+For the final comparison in the next section the 10 runs with the default configurations are compared with the last 10 runs of each of the agents and 10 runs using a feedback loop approach. The feedback loop approach functions as follows: first, during training, the workflows are run 10 times and each task is assigned the maximum number of CPUs and memory available. Then, in the next 10 runs the task are assigned the floor of the average number of CPUs used during the training and the mean amount of memory used plus the standard deviation. Should a task fail, then it is retried with the maximum amount of memory ever used by that task during the training time, and should it fail again then it is retried with double that value. This feedback loop approach has been mentioned in chapter \ref{cha:related_work} and it is loosely based on the work from \cite{tovarjob,FeedbackBasedAllocation}.
 
 
 
@@ -42,13 +42,15 @@ For the final comparison in the next section the 10 runs with the default config
         \label{fig:mem_use}
 \end{figure}
 
-In this section the performance of the gradient bandit and the q-learning approaches over their last 10 runs will be compared with each other and with the performance of the default configuration and the naive approach using a feedback loop.
+In this section the performance of the gradient bandit and the q-learning approaches over their last 10 runs will be compared with each other and with the performance of the default configuration and the approach using a feedback loop.
 
-The figures \ref{fig:cpu_results} and \ref{fig:mem_use} show the performance of all of these approaches. The left graph in the first figure shows the total amount of CPU hours requested by all of the tasks across all of the workflows and the amount of CPU hours that were effectively used (calculated as $cpu\_usage/100*time$ and $cpus*time$ respectively). The right graph in this figure shows the total time it took for all of the workflows to complete. Additionally in \ref{fig:mem_use}, the memory usage is shown. The unit measured in the right graph is the gigabyte hour and the graph displays the total amount of gigabyte hours allocated across all of the workflows as well as the actual amount of gigabyte hours used (based on each task’s peak RSS and execution time- this is the minimum amount of gigabyte hours which could have been assigned without the task being killed). The left graph shows the average memory usage of each individual task (calculated as $\frac{peak\_rss}{memory}$). 
+The figures \ref{fig:cpu_results} and \ref{fig:mem_use} show how these approached performed. The left graph in the first figure shows the total amount of CPU hours used by all of the tasks across all of the workflows and the amount of CPU hours that were actually used (also called the effective CPU hours). Effective CPU hours are the CPU usage multiplied by the execution time whereas the CPU hours are just the number of CPUs assigned multiplied by the execution time. For example a task which was assigned 3 CPUs, ran for 1 hour and had 200\% CPU usage would have used 3 CPU hours but only 2 effective CPU hours. These values are calculated for each individual task and then summed up to give both the total CPU hours used and the actual CPU hours used.
 
-From these graphics it is clear to see that all of the reinforcement learning approaches managed to improve CPU efficiency and allocate less CPU hours than both the default configuration and the naive feedback loop approach. In the case of the gradient bandit it was particularly effective at keeping the overall CPU hours assigned to an absolute minimum, however it seems that this efficiency came at the cost of speed, and it performed worse than its q-learning counterpart in this aspect, and took slightly longer than the default configuration. The q-learning approach took almost exactly the same amount of time as the feedback loop but was more efficient with regards to CPU usage. As can be seen, both of the reinforcement learning approaches are able to assign less CPU hours without having a detrimental effect on execution time (in fact the q-learning approach assigns less CPU hours but executes faster). Looking at the reward function \ref{q_agent_1_reward} for the q-learning agent the “CPU usage”considered by the function is not the task’s usage of the task but rather $max(90,CPU\_usage)$. As such agents for tasks which exhibit very high CPU usage ($>90\%$) receive no additional reward for increased efficiency (since efficiency can always be increased by decreasing the total number of CPUs assigned) so their rewards depend entirely on the execution time and they are thus encouraged to find resource allocations which decrease runtime. This most likely explains why the gradient bandit is more efficient but the q-learning agent is faster.
+The right graph in this figure shows the total time it took for all of the workflows to complete. Additionally in \ref{fig:mem_use}, the memory usage is shown. The unit measured in the right graph of \ref{fig:mem_use} is the gigabyte hour and the graph displays the total amount of gigabyte hours allocated across all of the workflows as well as the actual amount of gigabyte hours used (based on each task’s peak RSS and execution time- this is the minimum amount of gigabyte hours which could have been assigned without the task being killed). The left graph shows the average memory usage across all of the tasks, where memory usages is considered the task’s peak RSS value divided by the total memory assigned to it. 
 
-Interestingly, the feedback loop ultimately wound up increasing the effective CPU hours used by the workflows, something which had remained constant under the other 3 configurations, and the naive approach was fairly efficient in terms of the total amount of CPU hours assigned- relative to the increased effective usage. It can only be speculated as to why it used more actual CPU hours than the other approaches but it may be down to the fact that certain highly parallelizable tasks will be assigned incredibly large numbers of CPUs (e.g. a task with 2800\% CPU usage during training will be assigned 28 CPUs) far beyond the point of diminishing returns, and eventually lead to the workflow using more effective CPU hours. This would indicate that assigning more resources may increase the amount actually used which the feedback loop approach assumes is false.
+From these graphs it is clear to see that all of the reinforcement learning approaches managed to improve CPU efficiency and allocate less CPU hours than both the default configuration and the feedback loop approach. In the case of the gradient bandit it was particularly effective at keeping the overall CPU hours assigned to an absolute minimum, however it seems that this efficiency came at the cost of speed, and it performed worse than its q-learning counterpart in this aspect, and took slightly longer than the default configuration. The q-learning approach took almost exactly the same amount of time as the feedback loop but was more efficient with regards to CPU usage. As can be seen, both of the reinforcement learning approaches are able to assign less CPU hours without having a detrimental effect on execution time (in fact the q-learning approach assigns less CPU hours but executes faster). Looking at the reward function \ref{q_agent_1_reward} for the q-learning agent the “CPU usage”considered by the function is not the task’s usage of the task but rather $max(90,CPU\_usage)$. As such agents for tasks which exhibit very high CPU usage ($>90\%$) receive no additional reward for increased efficiency (since efficiency can always be increased by decreasing the total number of CPUs assigned) so their rewards depend entirely on the execution time and they are thus encouraged to find resource allocations which decrease runtime. This most likely explains why the gradient bandit is more efficient but the q-learning agent is faster.
+
+Interestingly, the feedback loop ultimately wound up increasing the effective CPU hours used by the workflows, something which had remained constant under the other 3 configurations, and the feedback loop approach was fairly efficient in terms of the total amount of CPU hours assigned- relative to the increased effective usage. It can only be speculated as to why it used more actual CPU hours than the other approaches but it may be down to the fact that certain highly parallelizable tasks will be assigned incredibly large numbers of CPUs (e.g. a task with 2800\% CPU usage during training will be assigned 28 CPUs) far beyond the point of diminishing returns, and eventually lead to the workflow using more effective CPU hours. This would indicate that assigning more resources may increase the amount actually used which the feedback loop approach assumes is false.
 
 Finally, regarding execution time, it is interesting to see that the q-learning approach is able to match the performance of the feedback loop despite assigning less CPU hours overall. In this regard the q-learning approach could be considered optimal relative to the other approaches. The gradient bandit ultimately over-emphasized decreasing costs and performed worse whilst the feedback loop approach over-emphasized attempting to increase performance by increasing CPU usage and wound up using more resources than would have been necessary to achieve the same execution time. The q-learning agent was able to find the best balance between resource usage and performance. This is of course the benefit of a reinforcement learning approach- it can estimate the values of a complex reward function by exploring different actions and then pick the maximizing action. The feedback loop approach cannot explore different allocations on its own and is dependent on the correctness of its assumptions and the quality of its input data.
 
