--- a/mainmatter/06_conclusion.tex
+++ b/mainmatter/06_conclusion.tex
@@ -4,9 +4,9 @@
 \chapter{Conclusion and Outlook}
 \label{cha:conclusion}
 
-This thesis has looked at the use of reinforcement learning to size tasks in scientific workflows. It has provided definitions and a summary of scientific workflows, scientific workflow managers, the gradient bandit problem, and q-learning in the background chapter. It has discussed related work in chapter \ref{cha:related_work}, and then incorporated gradient bandits and q-learning into a popular workflow manager and tested their performance against the default configurations and a feedback-loop based approach. In the evaluation this thesis found that the results had vastly improved on the default configuration and had matched the feedback loop approach for performance while achieving greater CPU efficiency but worse memory efficiency.
+This thesis has looked at the use of reinforcement learning to size tasks in scientific workflows. It has provided background information on scientific workflows, scientific workflow managers, the gradient bandit problem, and q-learning in chapter \ref{cha:background}. It has discussed related work in chapter \ref{cha:related_work} and then incorporated gradient bandits and q-learning into a popular workflow manager in chapter \ref{cha:approach}. The performance of this approach was then tested against that of the default configurations and that of a feedback-loop based approach. In the evaluation this thesis found that the results had vastly improved on the default configuration and had matched the feedback loop approach for runtime performance while achieving greater CPU efficiency but worse memory efficiency.
 
-This rest of this chapter briefly looks at what could be improved upon and what aspects may prove interesting for future research. Section \ref{sec:pot_improvements} considers what could be improved or done differently before section \ref{sec:implications} looks forwards and asks what implications this could have and what avenus might prove interesting for further research.
+This rest of this chapter briefly looks at what could be improved upon in section \ref{sec:pot_improvements} before section \ref{sec:implications} looks forwards and asks what implications this could have and what avenues might prove interesting for further research.
 
 %%=========================================
 \section{Potential Improvements}
