added back german umlaute where they had been removed, added abstract in german

--- a/frontmatter/declaration.tex
+++ b/frontmatter/declaration.tex
@@ -9,7 +9,7 @@ I hereby declare that I have created the present work independently and by my ow
 
 Hiermit erklaare ich, dass ich die vorliegende Arbeit selbststaandig und eigenhaandig sowie ohne unerlaubte fremde Hilfe und ausschliesslich unter Verwendung der aufgefaehrten Quellen und Hilfsmittel angefertigt habe.
 
-Die selbstaendige und eigenstaendige Anfertigung versichert an Eides statt:
+Die selbständige und eigenständige Anfertigung versichert an Eides statt:
 \begin{center}
 Berlin, den 13. Dezember 2021\\[3pc]
 Nicolas Zunker
