--- a/frontmatter/front.tex
+++ b/frontmatter/front.tex
@@ -15,7 +15,7 @@
 
     BACHELOR'S THESIS\\
     Distributed and Operating Systems Chair\\
-    Technische Universitaet Berlin
+    Technische Universität Berlin
 \end{center}
 \vfill
 
